--- a/powercord_manifest.json
+++ b/powercord_manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "Nicer Powercord Toasts",
+    "name": "Power Toasts",
     "description": "Toaster ovens make toast, y'know?",
     "version": "1.0.2",
     "author": "LuckFire#48000",
